# godwoken-original

./: .gitignore  .gitmodules  Cargo.toml  LICENSE.txt  Makefile  README.md
.github/workflows/: rust.yml
aggregator/: Cargo.toml
aggregator/src/: lib.rs  store.rs
contract/: common.h  deposit.c  host_state.c  main.c  registration.c  send_block.c  submit_block.c
contract/src/tests/: mod.rs  test_main.rs  utils.rs
contract/utils/: cbmt.h  mmr.h  pow.h
contracts/: Dockerfile  Makefile
contracts-test/: Cargo.toml  dummy_lock.c  main.c  registration.c  submit_block.c
contracts-test/src/tests/: dummy_lock.rs  mod.rs  test_main.rs  types_utils.rs  utils.rs
contracts-test/src/tests/main/: mod.rs  test_deposit.rs  test_invalid_block.rs  test_register.rs  test_revert_block.rs  test_submit_block.rs
contracts-test/src/tests/utils/: aggregator.rs  constants.rs  contract_state.rs  global_state.rs  mod.rs  shortcut.rs
contracts/c/: ckb_syscalls.c  entry.c
contracts/challenge/: Cargo.toml
contracts/challenge/src/: main.rs
contracts/dummy-lock/: Cargo.toml
contracts/dummy-lock/src/: main.rs
contracts/main/: Cargo.toml
contracts/main/src/: action.rs  common.rs  constants.rs  error.rs  lib.rs  libc_alloc.rs  main.rs  utils.rs
contracts/main/src/action/: deposit.rs  invalid_block.rs  mod.rs  register.rs  revert_block.rs  submit_block.rs
contracts/main/src/utils/: common.rs  hash.rs  merkle_tree.rs  mmr.rs  mod.rs  signature.rs
docs/: design.md
executor/: Cargo.toml
executor/src/: contracts.rs  error.rs  execution_context.rs  executor.rs  lib.rs  state.rs  traits.rs
src/tests/: host_state.rs  mod.rs  test_main.rs  utils.rs
types/: Cargo.toml
types/schemas/: blockchain.mol  godwoken.mol
types/src/: cache.rs  core.rs  extension.rs  lib.rs
types/src/conversion/: blockchain.rs  godwoken.rs  mod.rs  primitive.rs  shortcut.rs
utils/: Cargo.toml
utils/src/: lib.rs  mmr.rs  secp256k1.rs  smt.rs
