[package]
name = "godwoken-utils"
version = "0.1.0"
authors = ["jjy <jjyruby@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
blake2b-ref = { version = "0.1", default-feature = false }
libsecp256k1 = { version = "0.3", default-features = false }
ckb-merkle-mountain-range = { version = "0.2.0", default-features = false }
sparse-merkle-tree = { version = "0.1.1", default-features = false }
godwoken-types = { path = "../types", default-features = false }
