[package]
name = "godwoken-main"
version = "0.1.0"
authors = ["jjy <jjyruby@gmail.com>"]
edition = "2018"

[dependencies]
godwoken-types = { path = "../../types", default-features = false }
blake2b-ref = "0.1"
ckb-contract-std = "0.1.2"
ckb-merkle-mountain-range = { git = "https://github.com/nervosnetwork/merkle-mountain-range.git", rev = "aad0edd", default-features = false }
merkle-cbt = { git = "https://github.com/nervosnetwork/merkle-tree.git", rev = "b67f696", default-features = false }
libsecp256k1 = { version = "0.3", default-features = false }
