[package]
name = "godwoken-main"
version = "0.1.0"
authors = ["jjy <jjyruby@gmail.com>"]
edition = "2018"

[dependencies]
godwoken-types = { path = "../../types", default-features = false }
godwoken-utils = { path = "../../utils", default-features = false }
godwoken-executor = { path = "../../executor", default-features = false }
ckb-contract-std = "0.1.4"
